[VPAT:InstructorUI] Fixed low contrast on red and green buttons

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -1755,7 +1755,7 @@ end of styles used in the admin gradeable page
 }
 
 .notification-badge {
-    background-color: red;
+    background-color: var(--danger-red);
     padding: 1px 5px;
     color: white;
     font-weight: bold;
